--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -1,12 +1,34 @@
 <%- include('partials/header') -%>
+<%- include('partials/topnav') -%>
+
   <div class="container">
-    <div class="row justify-content-center mt-5">
-      <ul class="row list-unstyled">
+    <div class="row text-center">
+      <h1 class="mt-3 fs-3">Post Feed</h1>
+    </div>
+    
+    <div class="row justify-content-center mt-2">
+      <ul class="row g-3 list-unstyled">
         <% for(var i=0; i<posts.length; i++) {%>
-          <li class="col-6 justify-content-between mt-5">
-            <a href="/post/<%= posts[i]._id%>">
-              <img class="img-fluid" src="<%= posts[i].image%>">
-            </a>
+          <li class="col-md-6">
+            <div class="justify-content-between rounded shadow p-3 bg-white h-100">
+              <h4><%=posts[i].title %></h4>
+              <h5 class="fs-6"><%= posts[i].user.userName %> - <%=moment(posts[i].createdAt).format("lll") %></h5>
+              <a href="/post/<%= posts[i]._id%>">
+                <img class="img-fluid" src="<%= posts[i].image%>">
+              </a>
+              <div class="row justify-content-left mb-2">
+                <form
+                class="col-1"
+                action="/post/likePost/<%= posts[i]._id %>?_method=PUT"
+                method="POST"
+                >
+                <button class="btn btn-sm fa fa-heart <%= posts[i].likedBy.some(id => id.toString() === user.id.toString()) ? 'btn-secondary' : 'btn-primary' %>" type="submit"></button>
+                </form>
+                <span class="col-3 pt-1">Likes: <%= posts[i].likes %></span><span class="col-7 pt-1">Comments: <%= posts[i].commentCount %></span>
+              </div>
+              <p class="bg-light p-2"><%= posts[i].caption %></p>
+            </div>
+            
           </li>
         <% } %>
         </ul>
