--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,18 +1,25 @@
 <%- include('partials/header') -%>
-<div class="container">
-  <div class="row mt-5">
-      <div class="col-6">
-          <div>
+<%- include('partials/topnav') -%>
+
+<div class="container-lg">
+  <!--Page title-->
+  <div class="row text-center">
+    <h1 class="mt-3 fs-3">Profile Page</h1>
+  </div>
+  <div class="row mt-4">
+      <!--User info-->
+      <div class="col-md-4">
+          <div class="border border-primary rounded p-3 bg-white">
               <p><strong>User Name</strong>: <%= user.userName %></p>
               <p><strong>Email</strong>: <%= user.email %></p>
-              <a href="/logout" class="col-3 btn btn-primary">Logout</a>
           </div>
-          <div class="mt-5">
+          <!--Create a post-->
+          <div class="my-5">
             <h2>Add a post</h2>
             <form action="/post/createPost" enctype="multipart/form-data" method="POST">
               <div class="mb-3">
-                  <label for="title" class="form-label">Title</label>
-                  <input type="text" class="form-control" id="title" name="title">
+                <label for="title" class="form-label">Title</label>
+                <input type="text" class="form-control" id="title" name="title">
               </div>
               <div class="mb-3">
                 <label for="caption" class="form-label">Caption</label>
@@ -26,19 +33,24 @@
             </form>
           </div>
       </div>
-      <div class="col-6">
-        <ul class="row list-unstyled">
+      <!--posts-->
+      <div class="col-8">
+        <ul class="row g-2 list-unstyled">
         <% for(var i=0; i<posts.length; i++) {%>
-          <li class="col-6 justify-content-between mt-5">
-            <a href="/post/<%= posts[i]._id%>">
-              <img class="img-fluid" src="<%= posts[i].image%>">
-            </a>
-          </li>
+            <li class="col-lg-6">
+              <div class="rounded shadow p-3 mb-3 bg-white h-100">
+                <h4><%= posts[i].title%></h4>
+                <h5 class="fs-6"><%= moment(posts[i].createdAt).format("lll") %></h5>
+                <a href="/post/<%= posts[i]._id%>">
+                  <img class="img-fluid" src="<%= posts[i].image%>">
+                </a>
+                <span class="p-2">Likes: <%= posts[i].likes %></span><span>Comments: <%= posts[i].commentCount %></span>
+                <p class="bg-light p-2"><%= posts[i].caption %></p>
+              </div>
+              
+            </li>
         <% } %>
         </ul>
-        <div class="row justify-content-center mt-5">
-          <a class="btn btn-primary" href="/feed">Return to Feed</a>
-        </div>  
       </div>  
     </div>
   </div>
